Adding AccOverView to manifest and changing layout to relative

--- a/app/src/main/res/layout/gamelistings.xml
+++ b/app/src/main/res/layout/gamelistings.xml
@@ -1,47 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    tools:layout_editor_absoluteY="73dp">
 
     <TextView
         android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="11-02-2017"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="27dp" />
+
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+
+        android:text="11-02-2017" />
 
     <TextView
         android:id="@+id/textViewGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Michigan v Rutgers"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="46dp" />
+        android:layout_below="@+id/textViewDate"
+        android:layout_marginTop="5dp"
+        android:text="Michigan v Rutgers" />
 
-    <TextView
-        android:id="@+id/textViewTickets"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        tools:layout_editor_absoluteX="224dp"
-        tools:layout_editor_absoluteY="46dp" />
-
-    <TextView
-        android:id="@+id/textViewPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="$20"
-        tools:layout_editor_absoluteX="257dp"
-        tools:layout_editor_absoluteY="46dp" />
 
     <TextView
         android:id="@+id/textViewTType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BUY"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="46dp" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_below="@+id/textViewDate"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@+id/textViewGame"
+
+        android:text="BUY" />
+
+    <TextView
+        android:id="@+id/textViewTickets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewDate"
+        android:layout_toRightOf="@id/textViewTType"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="7dp"
+
+        android:text="100" />
+
+    <TextView
+        android:id="@+id/textViewPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/textViewTickets"
+        android:layout_below="@+id/textViewDate"
+        android:layout_marginLeft="7dp"
+        android:layout_marginTop="5dp"
+        android:text="$20" />
+</RelativeLayout>
