--- a/app/src/main/res/layout/selllayout.xml
+++ b/app/src/main/res/layout/selllayout.xml
@@ -4,14 +4,14 @@
 
     <TextView
         android:id="@+id/textViewSellNumber"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="43dp"
-        android:layout_marginStart="43dp"
+        android:layout_marginEnd="69dp"
+        android:layout_marginRight="69dp"
         android:layout_marginTop="38dp"
+        android:layout_toLeftOf="@+id/textViewSellPrice"
+        android:layout_toStartOf="@+id/textViewSellPrice"
         android:text="TextView"
         android:textSize="18sp" />
 
@@ -19,11 +19,12 @@
         android:id="@+id/textViewSellPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textViewSellNumber"
-        android:layout_marginLeft="46dp"
-        android:layout_marginStart="46dp"
-        android:layout_toEndOf="@+id/textViewSellNumber"
-        android:layout_toRightOf="@+id/textViewSellNumber"
+        android:layout_alignBaseline="@+id/textViewSellNumber"
+        android:layout_alignBottom="@+id/textViewSellNumber"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="96dp"
+        android:layout_marginRight="96dp"
         android:text="TextView"
         android:textSize="18sp" />
 </RelativeLayout>
