--- a/app/src/main/res/layout/activity_accoverview.xml
+++ b/app/src/main/res/layout/activity_accoverview.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="false"
-        android:text="Jane Doe"
+        android:text=""
         app:layout_constraintBottom_toTopOf="@+id/EmailText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -44,14 +44,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="jane.doe@umich.edu"
-        app:layout_constraintBottom_toTopOf="@+id/TransactionsList"
+        app:layout_constraintBottom_toTopOf="@+id/listViewTransactionsList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/UserNameText" />
 
     <ListView
-        android:id="@+id/TransactionsList"
+        android:id="@+id/listViewTransactionsList"
         android:layout_width="360dp"
         android:layout_height="438dp"
         android:listSelector="@android:color/holo_blue_light"
