--- a/app/src/main/res/layout/activity_transaction_confirmation.xml
+++ b/app/src/main/res/layout/activity_transaction_confirmation.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.glezma.group6project.Confirmation">
+    tools:context="com.example.glezma.group6project.TransactionConfirmation">
     <TextView
-        android:id="@+id/textViewGameLabel"
+        android:id="@+id/textViewGameLabel1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
@@ -17,107 +17,125 @@
         android:text="Game: "
         android:textSize="24sp"
         android:textStyle="bold"
-    />
+        />
     <TextView
-        android:id="@+id/textViewGame"
+        android:id="@+id/textViewGame1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:layout_marginLeft="100dp"
 
-       android:layout_alignTop="@+id/textViewGameLabel"
+        android:layout_alignTop="@+id/textViewGameLabel1"
 
         android:text="uf "
         android:textSize="24sp"
         android:textStyle="bold"
         />
     <TextView
-        android:id="@+id/textViewConfirmation"
+        android:id="@+id/textViewConfirmation1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewGameLabel"
+        android:layout_below="@+id/textViewGameLabel1"
         android:layout_marginTop="21dp"
         android:layout_marginLeft="20dp"
-        android:text="I want to "
+        android:text="You "
         android:textSize="24sp"
- />
+        />
     <TextView
-        android:id="@+id/textViewType"
+        android:id="@+id/textViewType1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewGameLabel"
+        android:layout_below="@+id/textViewGameLabel1"
         android:layout_marginTop="21dp"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="70dp"
         android:text="buy"
         android:textSize="24sp"
         />
 
     <EditText
-        android:id="@+id/editTextQuantity"
+        android:id="@+id/editTextQuantity1"
         android:layout_width="100dp"
         android:layout_height="39dp"
 
-        android:layout_below="@+id/textViewGameLabel"
+        android:layout_below="@+id/textViewGameLabel1"
         android:layout_marginTop="20dp"
-        android:layout_toRightOf="@+id/textViewType"
+        android:layout_toRightOf="@+id/textViewType1"
         android:ems="10"
+        android:enabled="false"
         android:inputType="textPersonName"
         android:text="0" />
 
     <TextView
-        android:id="@+id/textViewConfirmation2"
+        android:id="@+id/textViewConfirmation31"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_below="@+id/textViewConfirmation"
+        android:layout_below="@+id/textViewConfirmation1"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
 
         android:text="tickets at"
         android:textSize="24sp"
-  />
+        />
+
+
+    <TextView
+        android:id="@+id/textViewContact1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@+id/textViewConfirmation31"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+
+        android:text="Conttact email: "
+        android:textSize="20sp"
+        />
+
+    <TextView
+        android:id="@+id/textViewContactEmail1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autoLink="email"
+        android:layout_alignTop="@id/textViewContact1"
+        android:layout_below="@+id/textViewConfirmation21"
+        android:layout_toRightOf="@id/textViewContact1"
+
+        android:inputType="textEmailAddress"
+        android:text="a@a.com"
+        android:textSize="20sp" />
+
+
+
+
+
 
     <Button
-        android:id="@+id/buttonCancelConfirm"
-        android:layout_width="132dp"
-        android:layout_height="54dp"
-
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/buttonConfirm"
-        android:layout_marginEnd="45dp"
-        android:layout_marginRight="45dp"
-        android:text="Cancel"
-        tools:layout_editor_absoluteX="182dp"
-        tools:layout_editor_absoluteY="334dp" />
-
-    <Button
-        android:id="@+id/buttonConfirm"
+        android:id="@+id/buttonConfirm1"
         android:layout_width="128dp"
         android:layout_height="55dp"
 
-        android:layout_alignLeft="@+id/textViewConfirmation2"
-        android:layout_alignStart="@+id/textViewConfirmation2"
-        android:layout_below="@+id/textViewConfirmation2"
-        android:layout_marginLeft="27dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="1dp"
+
+        android:layout_below="@+id/textViewContact1"
+        android:layout_centerHorizontal="true"
+
+        android:layout_marginTop="30dp"
         android:text="Confirm"
         tools:layout_editor_absoluteX="46dp"
         tools:layout_editor_absoluteY="333dp" />
 
     <EditText
-        android:id="@+id/editTextPrice"
+        android:id="@+id/editTextPrice1"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textViewConfirmation2"
+        android:layout_alignTop="@+id/textViewConfirmation31"
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
-        android:layout_toEndOf="@+id/textViewConfirmation2"
-        android:layout_toRightOf="@+id/textViewConfirmation2"
+        android:layout_toEndOf="@+id/textViewConfirmation31"
+        android:layout_toRightOf="@+id/textViewConfirmation31"
         android:ems="10"
+        android:enabled="false"
         android:inputType="textPersonName"
         android:text="0" />
-
 
 </RelativeLayout>
