--- a/app/src/main/res/layout/activity_buy_sell_info.xml
+++ b/app/src/main/res/layout/activity_buy_sell_info.xml
@@ -53,7 +53,7 @@
         android:id="@+id/textViewBuy"
         android:layout_width="105dp"
         android:layout_height="39dp"
-        android:text="Buy"
+        android:text="Buyers"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/listViewBuy"
         app:layout_constraintEnd_toStartOf="@+id/textViewSell"
@@ -65,7 +65,7 @@
         android:id="@+id/textViewSell"
         android:layout_width="95dp"
         android:layout_height="38dp"
-        android:text="Sell"
+        android:text="Sellers"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/listViewSell"
         app:layout_constraintEnd_toEndOf="parent"
